<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ip">http://192.168.1.122:8080/</string>
    <string name="app_name">AiBang</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">登  录</string>
    <string name="login_register">还没有爱帮账号？立即注册</string>
    <string name="register_register_submit">注\u0020\u0020\u0020册</string>
    <string name="register_email">邮 \u0020\u0020\u0020箱</string>
    <string name="register_your_email">您的邮箱</string>
    <string name="register_user_name">用户名</string>
    <string name="register_your_user_name">你的用户名</string>
    <string name="register_password">密  \u0020\u0020\u0020码</string>
    <string name="register_your_password">密码长度不少于8</string>
    <string name="register_sex">性\u0020\u0020\u0020别</string>
    <string name="register_school">学  \u0020\u0020\u0020校</string>
    <string name="register_age">年  &#160;&#160;龄</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="left_and_right">Left and Right</string>
    <string name="siderbar_help">HELP\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="siderbar_private_message">私\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020信</string>
    <string name="siderbar_comment">评\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020论</string>
    <string name="siderbar_personal_homepage">个人主页</string>
    <string name="siderbar_account">账号</string>
    <string name="index_hide_menu">隐藏菜单</string>
    <string name="index_show_right_menu">显示右菜单</string>
    <string name="index_menu1">菜单项1</string>
    <string name="index_menu2">菜单项2</string>
    <string name="index_show_left_menu">显示左菜单</string>
    <string name="index_menu3">菜单项3</string>
    <string name="index_menu4">菜单项4</string>
    <string name="index_btn_show_adjustable">这个按钮显示菜单是可调整的</string>
    <string name="personal_information">个人信息</string>
    <string name="personal_photo">头像</string>
    <string name="personal_name">名字</string>
    <string name="personal_age">年龄</string>
    <string name="personal_sex">性别</string>
    <string name="personal_school">学校</string>
    <string name="search_result">搜索结果</string>
    <string name="search">搜索</string>
    <string name="personal_focus">关注</string>
    <string name="numbers">300</string>
    <string name="personal_fans">粉丝</string>
    <string name="name">他好像条狗</string>
    <string name="age">18</string>
    <string name="sex">男</string>
    <string name="school">清华大学</string>
    <string name="personlized_signature">个性签名</string>
    <string name="personlized_signatureWords">你好</string>
    <string name="home_page_userName">他好像只狗啊</string>
    <string name="personal_page">个人主页</string>
    <string name="helpContent">HELP正文</string>
    <string name="comment">发表评论</string>
    <string name="comment_inputext">发表下你的想法</string>
    <string name="Loadmore">Load More....</string>
    <string name="sd_card">SD卡不存在或不可用</string>
    <string name="save_success">图片已保存到SD卡</string>
    <string name="startText">always willing to help</string>
    <string name="Ibang"><b>I Bang</b></string>
    <string name="what1_text">图书馆考研自习室飞奔中……</string>
    <string name="what2_text">鱼与熊掌不可兼得？？</string>
    <string name="what3_text">always willing to help</string>
    <string name="what4_text">爱帮，让生活更简单</string>
    <string name="what_btn">Start</string>
    <string name="login_progressBar">正在登录</string>

    <string-array name="school_type">
        <item>南昌大学</item>
        <item>江西师范大学</item>
        
        <item>江西财经大学</item>
        <item>江西农业大学</item>
    </string-array>
    <string-array name="sex_type">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="age_type">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="picture_type">
        <item>相机拍照</item>
        <item>本地图片</item>
        <item>取消图片</item>
    </string-array>
    <string-array name="gift_type">
        <item>请吃饭</item>
        <item>小礼物</item>
        <item>发感谢</item>
        <item>money</item>
    </string-array>

    <string name="sendhelpmsg_cancle">取消</string>
    <string name="sendhelpmsg_name">Help</string>
    <string name="sendhelpmsg_inputText">请输入求助内容</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_baidu_map">BaiduMap</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_personal_page">PersonalPageActivity</string>
    <string name="title_activity_help_content">HelpContentActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_start">爱帮</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="normal">normal</string>
    <string name="hybrid">hybrid</string>
    <string name="map_not_ready">map_not_ready</string>
    <string name="map">Map\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="title_activity_whats_new">WhatsNewActivity</string>
    <string name="title_activity_what1">What1Activity</string>
    <string name="title_activity_what_second">WhatSecondActivity</string>
    <string name="title_activity_what_third">WhatThirdActivity</string>
    <string name="title_activity_what_forth">WhatForthActivity</string>

    <string-array name="layers_array">
        <item>normal</item>
        <item>hybrid</item>
    </string-array>

    <string name="title_activity_multi_map">MultiMapActivity</string>
    <string name="title_activity_abs_list_view_base">AbsListViewBaseActivity</string>
    <string name="title_activity_image_page">ImagePageActivity</string>
    <string name="title_activity_map2">Map2Activity</string>

</resources>