<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/whats4">
    
       <TextView 
           android:id="@+id/what4_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/what4_text"
           android:textSize="20sp"
           android:layout_marginTop="100dp"
           android:layout_marginLeft="20dp"
           />

       <Button
           android:id="@+id/whats4_btn"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true"
           android:layout_marginTop="90dp"
           android:layout_marginRight="10dp"
           android:text="@string/what_btn" 
           android:background="@color/abs__holo_blue_light"
           />
       <TextView 
           android:id="@+id/help"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/startText"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:layout_marginBottom="30dp"
           android:layout_marginRight="10dp"
           android:textSize="16sp"
           />

</RelativeLayout>