<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:orientation="horizontal"
        android:background="@drawable/actionbar_bg_blue_meizu_transparent">
        <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/clickable_flag_light"
        android:text="@string/login_submit"
        android:background="@android:color/transparent"
        android:textColor="#fff"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_login_ll_linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="76dp" >

        <EditText
            android:id="@+id/activity_login_et_login_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/activity_login_et_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/activity_login_btn_login_submit"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_submit"
            android:textColor="#fff"
            android:background="@drawable/actionbar_bg_blue_meizu_transparent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/activity_login_tv_login_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#6f6f6f"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/login_register"
        android:textColor="#fff"
        android:textSize="18sp" />


</RelativeLayout>