<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/activity_sendhelpmsg_rl_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/actionbar_bg_blue_meizu_transparent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/activity_sendhelpmsg_iv_sendButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/btn_send_selector" />

        <Button
            android:id="@+id/activity_sendhelpmsg_btn_cancleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/clickable_flag_light"
            android:text="@string/sendhelpmsg_cancle"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activity_sendhelpmsg_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/sendhelpmsg_name"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_sendhelpmsg_ll_help_container"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:paddingBottom="10.0dip" >

            <ImageView
                android:id="@+id/activity_sendhelpmsg_iv_picture_btn"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="13.0dip"
                android:src="@drawable/btn_picture_selector" />

            <ImageView
                android:id="@+id/activity_sendhelpmsg_iv_location_btn"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="13.0dip"
                android:layout_toRightOf="@id/activity_sendhelpmsg_iv_picture_btn"
                android:src="@drawable/btn_location_selector" />

            <ImageView
                android:id="@+id/activity_sendhelpmsg_iv_gift_btn"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="13.0dip"
                android:layout_toRightOf="@id/activity_sendhelpmsg_iv_location_btn"
                android:src="@drawable/btn_gift_selector" />
            
            <TextView
                android:id="@+id/activity_sendhelpmsg_tv_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/activity_sendhelpmsg_iv_gift_btn"
                android:layout_marginLeft="13.0dip"
                android:textColor="#ff4b4b4b"
                android:background="@drawable/map_name"
                android:textSize="12.0dip" 
				android:visibility="gone"
               />
             <TextView
                android:id="@+id/activity_sendhelpmsg_tv_mapname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/activity_sendhelpmsg_tv_gift"
                android:layout_marginLeft="13.0dip"
                android:textColor="#ff4b4b4b"
                android:background="@drawable/map_name"
                android:textSize="12.0dip" 
				android:visibility="gone"
               />
            
            
            <EditText
                android:id="@+id/activity_sendhelpmsg_et_edit_help"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/activity_sendhelpmsg_iv_picture_btn"
                android:background="@null"
                android:gravity="top|left|center"
                android:hint="@string/sendhelpmsg_inputText"
                android:inputType="textMultiLine"
                android:paddingBottom="16.0dip"
                android:paddingLeft="14.0dip"
                android:paddingRight="14.0dip"
                android:paddingTop="13.0dip"
                android:textColor="#ff4b4b4b"
                android:textColorHint="#ffa5a5a5"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/activity_sendhelpmsg_tv_text_limit"
                android:layout_width="40.0dip"
                android:layout_height="wrap_content"
                android:layout_above="@id/activity_sendhelpmsg_iv_picture_btn"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8.0dip"
                android:layout_marginRight="15.0dip"
                android:background="@drawable/btn_del_selector"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="11.0dip" />
            
            <ImageView
                android:id="@+id/activity_sendhelpmsg_pic_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_above="@id/activity_sendhelpmsg_iv_picture_btn"
                android:layout_marginLeft="5.0dp"
                android:layout_marginBottom="8.0dip"
                android:gravity="center"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>